--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "microbundle build --external none",
     "watch": "microbundle watch --compress false",
     "postbuild": "npm run test",
-    "test": "ava"
+    "test": "ava",
+    "prepare": "microbundle build"
   },
   "keywords": [],
   "license": "MIT",
